--- a/style.css
+++ b/style.css
@@ -135,6 +135,7 @@ body{
 
 .menu-bar li {
     position: relative;
+    z-index: 999;
 }
 
 .menu-bar li ul {
@@ -146,6 +147,7 @@ body{
     border-radius: 4px;
     padding: 8px 0;
     margin-top: 4px;
+    z-index: 1000; 
 }
 
 .menu-bar li:hover > ul {
@@ -153,7 +155,9 @@ body{
 }
 
 .menu-bar li ul li {
+    position: relative;
     display: block;
+    width: 100%;
 }
 
 .menu-bar li ul li a {
@@ -162,8 +166,13 @@ body{
     color: #16181F;
     font-weight: normal;
     transition: color 0.2s;
+    text-decoration: none;
 }
 
+.menu-bar li ul li a:hover {
+    background-color: #F8FBFF;
+    color: #1468C0;
+}
 
 
 
@@ -209,6 +218,7 @@ body{
     display: flex;
     gap: 10px;
     align-items: flex-start;
+    align-items: flex-end;
 }
 
 .form-group {
