--- a/CSS/style.css
+++ b/CSS/style.css
@@ -237,16 +237,6 @@ body{
     font-size: 14px;
 }
 
-.form-group::after {
-    content: '▼';
-    position: absolute;
-    right: 15px;
-    top: 50%;
-    transform: translateY(-50%);
-    pointer-events: none;
-    font-size: 12px;
-    color: #666;
-}
 
 .date-input, .time-input {
     width: 100%;
@@ -476,7 +466,7 @@ body{
 /* ---------------------- news ----------------------- */
 
 .news-wrapper{
-    max-width: 1440px;
+    max-width: 100%;
  
     
 }
@@ -712,4 +702,24 @@ body{
 
 .footer-links li a:hover {
     color: #CCE1FB;
+}
+
+
+
+
+
+
+
+/* ----------------------------- Booking page ------------------------------- */
+
+.process-container {
+}
+
+.step-container{
+    display: flex;
+}
+
+.step-number-container{
+    border-radius: 100px;
+    background-color: #CCE1FB;
 }
