--- a/CSS/style.css
+++ b/CSS/style.css
@@ -766,3 +766,120 @@ body{
 .process-container .step-container:last-child + i {
     display: none;
 }
+
+/* ------------------------ Main part -------------------------- */
+
+.main-container{
+    display: flex;
+    width: 1440px;
+    padding: 40px 120px;
+    flex-direction: column;
+    align-items: center;
+    gap: 40px;
+}
+
+.page-title{
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 100%; /* 32px */
+    width: 1200px;
+}
+
+.ticketTab-container{
+    display: flex;
+    align-items: center;
+    gap: 40px;
+    align-self: stretch;
+}
+
+.ticket-tab.active{
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 590;
+    line-height: 150%; /* 30px */
+    border-bottom: 4px solid #1a73e8;
+}
+
+.card-container{
+    display: flex;
+    align-items: center;
+    align-content: center;
+    gap: 24px 16px;
+    align-self: stretch;
+    flex-wrap: wrap;
+}
+
+.ticketCard-container{
+    display: flex;
+    width: 280px;
+    height: 400px;
+    padding: 24px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 24px;
+    border-radius: 20px;
+    background: var(--Primary-03, #F8FBFF);
+
+    /* Shadows/shadow-sm */
+    box-shadow: 0px 1px 3px 0px rgba(10, 13, 18, 0.10), 0px 1px 2px -1px rgba(10, 13, 18, 0.10);
+}
+
+.card-title{
+    align-self: stretch;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 590;
+    line-height: 150%; /* 30px */
+    color: var(--Primary-01, #1468C0);
+
+}
+
+.card-content{
+    flex: 1 0 0;
+    align-self: stretch;
+}
+
+.card-remark-container{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 4px;
+    align-self: stretch;
+
+}
+
+.card-remark{
+    display: flex;
+    align-items: flex-start;
+    gap: 8px;
+    align-self: stretch;
+}
+
+.ticket-btn{
+    display: flex;
+    height: 44px;
+    padding: 8px 18px;
+    justify-content: center;
+    align-items: center;
+    gap: 12px;
+    flex-shrink: 0;
+    border-radius: 100px;
+    background: var(--Primary-02, #CCE1FB);
+}
+
+
+.ticket-btn a{
+    text-decoration: none;
+    color: var(--Primary-01, #1468C0);
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 590;
+    line-height: 150%; /* 30px */
+}
+
+.ticket-btn:hover{
+    background: var(--Primary-01, #1468C0);
+    color: white
+}
