--- a/CSS/style.css
+++ b/CSS/style.css
@@ -269,7 +269,7 @@ body{
     background-color: #1557b0;
 }
 
-/* Switch arrow icon */
+/* Switch arrow icon
 .switch-icon {
     padding: 10px;
     background: none;
@@ -277,7 +277,7 @@ body{
     cursor: pointer;
     display: flex;
     align-items: center;
-}
+} */
 
 
 /* ------------------------ carousel ------------------------- */
@@ -378,6 +378,7 @@ body{
     display: flex;
     gap: 20px;
     margin-bottom: 16px;
+    align-items: center;
   }
 
   .form-ID{
@@ -389,6 +390,7 @@ body{
     display: flex;
     align-items: center; /* 先讓主要物件整體置中 */
     gap: 12px; /* 控制間距 */
+    margin-bottom: 16px;
   }
   
   .train-number {
@@ -430,7 +432,7 @@ body{
   }
 
   .search-button {
-    display: inline-block;
+    display: flex;
     width: 300px;
     padding: 12px;
     background: #1a73e8;
@@ -438,6 +440,9 @@ body{
     border: none;
     border-radius: 4px;
     font-size: 16px;
+    gap: 16px;
+    align-items: center;
+    justify-content: center;
 
    
   }
@@ -492,6 +497,7 @@ body{
 .read-more a{
     text-decoration: none;
     color: #16181F;
+    
 }
 
 .news-top h4{
@@ -541,7 +547,26 @@ body{
     justify-content: space-between; /* 讓左右兩邊元素分開對齊 */
     align-items: center; /* 垂直置中 */
     width: 100%;
+    gap: 24px;
 }
+
+.news-content h6{
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    width: 100%;
+}
+
+.read{
+    /* display: flex; */
+    height: 30px;
+    padding: 0px var(--spacing-lg, 12px);
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    white-space: nowrap;
+}
+
 
 .news-item2{
     display: flex;
@@ -649,6 +674,7 @@ body{
     font-style: normal;
     font-weight: 590;
     line-height: 150%; /* 30px */
+    
 }
 
 .footer-info-text {
