--- a/CSS/style.css
+++ b/CSS/style.css
@@ -807,12 +807,13 @@ body{
 
 .main-container{
     display: flex;
-    width: 1440px;
+    max-width: 1440px;
     padding: 40px 120px;
     flex-direction: column;
     align-items: center;
     gap: 40px;
 }
+
 
 .page-title{
     font-size: 32px;
